# TPQZcam

./: CMakeLists.txt  README.md  cmakeDox.cmake
cmake/: cmakePack.cmake  cmakePackDEB.cmake
doc/: .gitignore  CMakeLists.txt  Doxyfile.in
env/: t_CMakeLists
exBuild/: buildApp.sh  buildClean.sh  buildLib.sh  buildProj.sh  buildVnv.sh
src/: CMakeLists.txt  buildApp.sh  buildClean.sh  buildLib.sh  cmakeDox.cmake  cmakeFuncs.cmake  cmakeLibs.cmake  cmakePack.cmake  foo  xConfig.cmake.in
src/libcam/: CMakeLists.txt  Camera.cpp  FileList.cmake  Loader.cpp  XRefBase.h  XRefBase.inl  cam.h  io.cpp  xref.cpp  xref.h
src/libdat/: BestOf.h  BestOf.inl  CMakeLists.txt  Extents.h  Extents.inl  FileList.cmake  IndexIterator.h  IndexIterator.inl  Jump.cpp  Jump.h  Jump.inl  KeyedValues.cpp  Latice.h  Latice.inl  NdxBegEnd.cpp  NdxBegEnd.h  Range.h  Range.inl  Region.h  Region.inl  SubExtents.cpp  SubExtents.h  SubExtents.inl  algorithm.h  algorithm.inl  array.h  array.inl  cast.h  compare.h  compare.inl  discrete.h  discrete.inl  grid.h  grid.inl  info.h  info.inl  io.inl  iter.cpp  iter.h  iter.inl  (+11 more)
src/libga/: CMakeLists.txt  FileList.cmake  Pose.cpp  Pose.h  Spin1d.cpp  constructs.cpp  quantities.cpp  quantities.h  quantities.inl  spin.cpp
src/libgeo/: CMakeLists.txt  FileList.cmake  ProbRay.cpp  ProbRay.h  ProbRay.inl  Triangle.cpp  Triangle.h  cube.cpp  cube.h  cube.inl  io.cpp  io.h  si.cpp  si.h  si.inl  xform.inl
src/libio/: CMakeLists.txt  FileList.cmake  LinePrefixer.cpp  LinePrefixer.h  binary.h  binary.inl  file.cpp  file.h  string.cpp
src/libla/: CMakeLists.txt  FileList.cmake
src/libmath/: CMakeLists.txt  CircleTab.h  CircleTab.inl  CosTable.h  CosTable.inl  FileList.cmake  Partition.cpp  Partition.h  Partition.inl  PolyFunc.cpp  angle.h  angle.inl  interp.inl  math.h  math.inl  root.inl  smooth.h  smooth.inl
src/libprob/: CMakeLists.txt  CdfForward.cpp  CdfForward.inl  CdfInverse.cpp  CdfInverse.h  CdfInverse.inl  FileList.cmake  Frac9.cpp  Frac9.h  Frac9.inl  Histogram.cpp  Histogram.h  Histogram.inl  SampleEntropy.h  SampleEntropy.inl  SampleGen.cpp  SampleGen.h  SampleStats.h  histo.h  histo.inl  io.h  io.inl  mean.inl  median.inl  pdf.cpp  pdf.h  pdf.inl  prob.h
src/libsys/: CMakeLists.txt  FileList.cmake  GhostTown.h  GhostTown.inl  Timer.cpp  Utilization.cpp  Utilization.h  Utilization.inl  jobCapacity.h  jobCapacity.inl  jobFactory.cpp  jobFactory.h  jobFactory.inl
src/vnv/: testBuild.cpp
tst/: CMakeLists.txt  cmakeUnits.cmake
tst/cam/: CMakeLists.txt
tst/dat/: CMakeLists.txt  uRegion.cpp  udat.cpp  udiscrete.cpp  unull.cpp
tst/ga/: CMakeLists.txt  ufunctions.cpp
tst/geo/: CMakeLists.txt  uintersect.cpp
tst/io/: CMakeLists.txt
tst/la/: CMakeLists.txt
tst/math/: CMakeLists.txt  uangle.cpp
tst/prob/: CMakeLists.txt
tst/sys/: CMakeLists.txt
vnv/: .gitignore  CMakeLists.txt  testBuild.cpp
